some nice boot screen

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,28 +1,26 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto+Mono');
-
-$colors:( 
-  background: black, 
-  text: #F4F4F4, 
-  bold-text: white, 
-  selection: #525252, 
-  black: black, 
-  red: #8D1A11, 
-  green: #47A526, 
-  yellow: #9B9729, 
-  blue: #011AAA, 
-  magenta: #A22EA5, 
-  cyan: #499EB2, 
-  white: #BFBFBF, 
-  bright-black: #656565, 
-  bright-red: #D2281C, 
-  bright-green: #60D53F, 
-  bright-yellow: #EBE74F, 
-  bright-blue: #0023DE, 
-  bright-magenta: #D235DE, 
-  bright-cyan: #6AE5E0, 
-  bright-white: #E4E4E4
-);
-@each $name, $value in $colors {
+$colors:( background: black,
+text: #F4F4F4,
+bold-text: white,
+selection: #525252,
+black: black,
+red: #8D1A11,
+green: #47A526,
+yellow: #9B9729,
+blue: #011AAA,
+magenta: #A22EA5,
+cyan: #499EB2,
+white: #BFBFBF,
+bright-black: #656565,
+bright-red: #D2281C,
+bright-green: #60D53F,
+bright-yellow: #EBE74F,
+bright-blue: #0023DE,
+bright-magenta: #D235DE,
+bright-cyan: #6AE5E0,
+bright-white: #E4E4E4);
+@each $name,
+$value in $colors {
   .color-#{$name} {
     color: $value;
   }
@@ -39,3 +37,4 @@ body {
   font-size: 18px;
   caret-color: transparent;
 }
+
